GP3: Drawing on frame without keyframe with auto-keying off gives error #116343

Closed
opened 2023-12-19 15:09:55 +01:00 by Simon Thommes · 3 comments
Member

System Information
Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-19 00:09, hash: 69d22a42d06f
Worked: (newest version of Blender that worked as expected)

Short description of error
With Grease Pencil 3: Drawing on a frame without a keyframe, while auto-keying is turned off results in this error:
image

Exact steps for others to reproduce the error

  • create GP3 primitive object
  • go to another frame
  • draw
**System Information** Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-19 00:09, hash: `69d22a42d06f` Worked: (newest version of Blender that worked as expected) **Short description of error** With Grease Pencil 3: Drawing on a frame without a keyframe, while auto-keying is turned off results in this error: ![image](/attachments/cd09218f-e38c-451b-9f7b-a011baa33317) **Exact steps for others to reproduce the error** - create GP3 primitive object - go to another frame - draw
9.6 KiB
Simon Thommes added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-19 15:09:55 +01:00
Simon Thommes added this to the Grease Pencil project 2023-12-19 15:09:57 +01:00
Germano Cavalcante added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-19 21:33:05 +01:00

I can confirm.

Cc. @filedescriptor

I can confirm. Cc. @filedescriptor
Falk David self-assigned this 2023-12-20 10:01:21 +01:00
Member
Just remove this?: https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/sculpt_paint/grease_pencil_draw_ops.cc#L146-L148 :)
Member

oh, nvm Falk claimed the task already

oh, nvm Falk claimed the task already
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-21 12:11:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116343
No description provided.